Fixed navbar on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,6 @@ html, body {
 }
 
 #navbar {
-	height:30px;
 	line-height:30px;
 	vertical-align:middle;
 }
